--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     /*background-color: black;
     color: white;*/
     font-family: Nerko One;
+    width: 100%;
 }
 
 header{
@@ -28,8 +29,8 @@ nav{
     display: flex;
 
     margin-top: 10px;
-    margin-left: 150px;
-    justify-content: right;
+    
+    justify-content: center;
     
 }
 
@@ -37,6 +38,7 @@ nav{
     display: block;
     font-size: 20px;
     padding: 10px;
+    margin-right: 50px;
     justify-content: center;
     /*background-color: violet;*/
 }
@@ -82,7 +84,7 @@ nav{
     position: fixed;
     display: none;
     width: 80%;
-    height: 80%;
+    height: 400px;
     top: 10%;
     right: 10%;
     bottom: 10%;
